--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Made By Akborana for tanu</title>
+  <title>Happy girlfriend day babe 😘</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
 
     <footer class="footer">
       <div class="footer-text">
-        <center><p>Copyright &copy; 2023 by | All Rights Reserved By AKAY</p></center>
+        <center><p>Copyright &copy; 2024 by | All Rights Reserved By AKAY</p></center>
       </div>
 
       <div class="footer-iconTop">
