--- a/index.html
+++ b/index.html
@@ -11,20 +11,28 @@
     <div class="container">
       <h2 id="text1"></h2>
     </div>
-
-
   </div>
 
+  <!-- Audio Element -->
   <audio id="background-music" src="https://audio.jukehost.co.uk/cB68UECSZZFa4JEFjNdjZMNU8HQuAaI5"></audio>
 
+  <!-- Play Button -->
+  <button id="play-button">Play Music</button>
+
+  <!-- JavaScript for playing music -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="main.js"></script>
   <script>
-    window.addEventListener('DOMContentLoaded', (event) => {
+    document.addEventListener('DOMContentLoaded', function () {
       var audio = document.getElementById('background-music');
-      audio.play().catch(error => {
-        // Handle the error if the audio couldn't be played automatically
-        console.log("Audio play failed due to user interaction requirement.");
+      var playButton = document.getElementById('play-button');
+
+      playButton.addEventListener('click', function () {
+        audio.play().then(() => {
+          console.log("Audio started playing.");
+        }).catch(error => {
+          console.log("Audio play failed:", error);
+        });
       });
     });
   </script>
