--- a/index.html
+++ b/index.html
@@ -16,24 +16,20 @@
   <!-- Audio Element -->
   <audio id="background-music" src="https://audio.jukehost.co.uk/cB68UECSZZFa4JEFjNdjZMNU8HQuAaI5"></audio>
 
-  <!-- Play Button -->
-  <button id="play-button">Play Music</button>
-
   <!-- JavaScript for playing music -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="main.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       var audio = document.getElementById('background-music');
-      var playButton = document.getElementById('play-button');
 
-      playButton.addEventListener('click', function () {
+      document.addEventListener('click', function () {
         audio.play().then(() => {
           console.log("Audio started playing.");
         }).catch(error => {
           console.log("Audio play failed:", error);
         });
-      });
+      }, { once: true }); // Ensures the event is triggered only once
     });
   </script>
 </body>
